--- a/templates/orientdb.init.erb
+++ b/templates/orientdb.init.erb
@@ -1,5 +1,20 @@
 #!/bin/sh
 # File Managed by Puppet
+<% if operatingsystem == 'RedHat' or operatingsystem == 'CentOS' or operatingsystem == 'Scientific' %>
+# orientdb        Startup script for OrientDB
+#
+# chkconfig: - 85 15
+# description: OrientDB is a NoSQL Graph Database
+<% elsif operatingsystem == 'Debian' or operatingsystem == 'Ubuntu' or operatingsystem == 'Mint' %>
+<% end %>
+### BEGIN INIT INFO
+# Provides:          orientdb
+# Required-Start:    $local_fs $remote_fs $network 
+# Required-Stop:     $local_fs $remote_fs $network 
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Start/stop orientdb service
+### END INIT INFO
 
 # define where orientdb is - this is the directory containing directories log, bin, conf etc
 ORIENTDB_HOME=${ORIENTDB_HOME:-"<%= scope.lookupvar('orientdb::real_orientdb_dir') %>"}
